--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -9,20 +9,25 @@ Base styles
 	font-family: $font;
 	outline: none;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body{
 	overflow-y: hidden;
 }
+
 a{
   color: black;
   }
+
 a:hover{
 	color: #ffffff;
 	background: #000000;
 	text-decoration: none;
 }
+
 b, strong{
 	font-weight: bold;
 }
@@ -129,7 +134,7 @@ header{
 	font-size:13px;
 	position: fixed;
 	padding-left: 25px;
-	width: 100%;
+	width: 95vw;
 	line-height:1.3;
   h6{
   	display:inline;
