--- a/css/post_new.scss
+++ b/css/post_new.scss
@@ -7,22 +7,23 @@
 @media screen and (max-height: 690px) {  
 	.content{
 		height: calc(100vh - 200px) ;
-		min-height: 350px;
-		iframe {
+		.fix535, img, iframe{
 			height: calc(100vh - 200px);
-			min-height: 350px;
-		}
-		.fix535, img{
-			height: calc(100vh - 200px);
-			min-height: 350px;
 		}
 	}
 	.description{
 		top: calc(100vh - 115px);
 	}
 }
-@media screen and (max-height: 550px) {
-	.description{
-		top: 435px;
+@media screen and (max-height: 250px) {
+  header{ display:none;}
+  .description{display:none;}
+	.content{
+    top:10px;
+		height: calc(100vh - 20px);
+    padding:0px 10px;
+		.fix535, img, iframe{
+		  height: calc(100vh - 20px);
+		}
 	}
-}
+} 
