--- a/css/post_old.scss
+++ b/css/post_old.scss
@@ -7,3 +7,27 @@
 .description{
 	top: 435px;
 }
+
+@media screen and (max-height: 550px) {  
+  .content{
+    height:calc(100vh - 200px) ;
+		.fix535, img, iframe{
+			height: calc(100vh - 200px);
+		}
+  }
+	.description{
+		top: calc(100vh - 115px);
+	}
+}
+@media screen and (max-height: 250px) {
+  header{ display:none;}
+  .description{display:none;}
+	.content{
+    top:10px;
+		height: calc(100vh - 20px);
+    padding:0px 10px;
+		.fix535, img, iframe{
+		  height: calc(100vh - 20px);
+		}
+	}
+} 
