new escaparate, margin corrected

--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -4,7 +4,7 @@
   <li><a href="/architectus-omnibus">Architectus Omnibus?</a></li>
   <li><a href="/mncars-audiovisuales"> Audiovisuales MNCARS</a></li>
   <li><a href="/centro-federico-garcia-lorca">Centro Federico García Lorca</a></li>
-  <li><a href="/cin-por-mujeres">Cine por mujeres</a></li>
+  <li><a href="/cine-por-mujeres">Cine por mujeres</a></li>
   <li><a href="/eclectic">Eclèctic</a></li>
   <li><a href="/el-poder-del-arte">El poder del arte</a></li>
   <li><a href="/extremadura-es-cultura">Extremadura es Cultura</a></li>
