--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,14 +13,14 @@
     {% else %}
     <link rel="stylesheet" href="{{ site.baseurl }}/css/post_new.css">
     {% endif %}
-    <script src="{{ site.baseurl }}/assets/jquery-3.2.1.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/lazyload.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/jquery-3.2.1.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/lazyload.min.js"></script>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/OverlayScrollbars.css">
-    <script src="{{ site.baseurl }}/assets/jquery.overlayScrollbars.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/jquery.overlayScrollbars.min.js"></script>
 
 
-    <script src="{{ site.baseurl }}/assets/scripts.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
     <!--{% if page.title == "El vivero" %}<script src="{{ site.baseurl }}/assets/escaparate.js"></script>{% endif %} -->
     {% if page.style %}
     <style type="text/css">
