nuevos ajustes: responsive funciona en navegadores no moviles, scroll vertical+horizontal, flechas scroll

--- a/_includes/escaparate-new.html
+++ b/_includes/escaparate-new.html
@@ -1,3 +1,3 @@
-<object type="image/svg+xml" data="/assets/escaparate-new.svg" style="margin-left:-22px;">
+<object type="image/svg+xml" data="/assets/escaparate-new.svg">
   <param name="src" value="/assets/escaparate-new.svg">
 </object>
