--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,10 @@
 ---
 layout: default
 ---
-<div id="content" class="content">
+<div id="content">
 {{ content }}
-<div id="leftscroll" class="scroll" onclick='hidecontact()'></div>
-<div id="rightscroll" class="scroll" onclick='hidecontact()'></div>
 </div>
 
-<div id="description" class="description">
+<div id="description">
 {{ page.footer }}
 </div>
