--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,7 +11,7 @@ Calle Pez, 27. Oficina 312<br>28004 Madrid<br><br>
   <a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">instagram</a>
 </span>
 <span id="issuu">
-  <a href="http://issuu.com/elvivero" target="_blank" class="nohover">Issuu</a>
+  <a href="http://issuu.com/elvivero" target="_blank" class="nohover">issuu</a>
   </span>
 </div>
 </div>
