--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,8 @@ header section{
   height:100%;
 }
 
+#content img.small{height:50%;}
+
 #content .fix535 {
   max-height:535px;
 }
@@ -182,6 +184,8 @@ header section{
 #content img:last-child{
   padding-right: 25px !important;
 }
+
+
 #content  .espacio60{ margin-right: 60px; }
 #content  .espacio55{ margin-right: 55px; }
 #content  .espacio50{ margin-right: 50px; }
