--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div id="content">
+<main id="content">
 {{ content }}
-</div>
+</main>
 
 <div id="description">
 {{ page.footer }}
