--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,18 @@
 <head>
     {% include analytics.html %}
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     {% if page.title == "El vivero" %}<title>{{ site.title }}</title>{% else %}<title>{{ site.title }} - {{ page.title }}</title>{% endif %}
     <link rel="shortcut icon" id="favicon" type="image/png" href="{{ site.baseurl }}/assets/img/icons/favicon1.png"/>
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/icons/apple-touch-icon.png" />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     {% if page.title == "El vivero" %}<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/escaparate.css">{% endif %}
     {% if page.layout == "post_old" %}<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/post_old.css">{% else %}<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/post_new.css">{% endif %}
-    <script src="/assets/js/jquery-3.4.1.min.js"></script>
+    <!-- <script src="/assets/js/jquery-3.4.1.min.js"></script> -->
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
     <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
     {% if page.style %}
     <style type="text/css">
