--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="menu menu-es">
 	<section id="homebutton"><a href="{{ site.baseurl }}/">El vivero</a></section>
 	<section id="project-link">
-    <a onclick="displaySelector()">Projects</a>
+    <a onclick="displaySelector()" href="#">Projects</a>
 	</section>
 	<section id="studio-link"><a href="{{ site.baseurl }}/studio/">Studio</a></section>
-  <section id="contact-link"><a onclick="displaycontact()">Contact</a></section>
+  <section id="contact-link"><a onclick="displaycontact()" href="#">Contact</a></section>
 </header>
