--- a/_includes/escaparate-new.html
+++ b/_includes/escaparate-new.html
@@ -1,3 +1,3 @@
-<object type="image/svg+xml" data="/assets/escaparate-new.svg">
-  <param name="src" value="/assets/escaparate-new.svg">
+<object type="image/svg+xml" data="/assets/escaparate-new-statically.svg">
+  <param name="src" value="/assets/escaparate-new-statically.svg">
 </object>
