nofollow noreferrer noopener

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,13 +5,13 @@
 T +34 915 328 011<br>
 <a href="mailto:info@elvivero.es">e-mail</a><br><br>
 Calle Pez, 27. Oficina 312<br>28004 Madrid<br><br>
-<a href="https://goo.gl/maps/KXOsF" target="_blank">View map &gt;</a><br><br>
+<a href="https://goo.gl/maps/KXOsF" target="_blank" rel="noopener noreferrer nofollow">View map &gt;</a><br><br>
 <div class="social" >
 <span id="face">
-  <a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">instagram</a>
+  <a href="https://www.instagram.com/elviverodesign" target="_blank" rel="noopener noreferrer nofollow"class="nohover">instagram</a>
 </span>
 <span id="issuu">
-  <a href="http://issuu.com/elvivero" target="_blank" class="nohover">issuu</a>
+  <a href="http://issuu.com/elvivero" target="_blank" rel="noopener noreferrer nofollow" class="nohover">issuu</a>
   </span>
 </div>
 </div>
