--- a/_includes/image_path.html
+++ b/_includes/image_path.html
@@ -1,1 +1,1 @@
-https://cdn.statically.io/img/elvivero.es/f=auto,h=535/assets/img{{page.image_path}}
+{{ site.baseurl }}/assets/img{{ page.image_path }}
