--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header class="menu menu-es">
-	<section id="homebutton"><a href="{{ site.baseurl }}/">El vivero</a></section>
-	<section id="project-link">
-    <a onclick="displaySelector()" href="#">Projects</a>
-	</section>
-	<section id="studio-link"><a href="{{ site.baseurl }}/studio/">Studio</a></section>
-  <section id="contact-link"><a onclick="displaycontact()" href="#">Contact</a></section>
+    <section id="homebutton"><a href="{{ site.baseurl }}/">El vivero</a></section>
+    <section id="project-link">
+        <a onclick="displaySelector()" href="#">Projects</a>
+    </section>
+    <section id="studio-link"><a href="{{ site.baseurl }}/studio/">Studio</a></section>
+    <section id="contact-link"><a onclick="displaycontact()" href="#">Contact</a></section>
 </header>
+{% include project-selector.html %}
