solving seo issues

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,6 @@
      {{ page.style }}
      </style>
      {% endif %}
-    {% seo %}
+    {% seo title=false %}
     {% include matomo.html %}
 </head>
